samples/_failures_safe/1761243970_5224c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83edc3f8.c: In function ‘main’:
./samples/SAFE/__tmp_83edc3f8.c:162:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  162 |     for (int i
      |     ^~~
./samples/SAFE/__tmp_83edc3f8.c:162:5: error: expected declaration or statement at end of input
